# Universal_Robots_ROS_Tutorials

./: README.md
my_robot_cell/my_robot_cell_control/: package.xml
my_robot_cell/my_robot_cell_control/launch/: start_robot.launch.py
my_robot_cell/my_robot_cell_description/: package.xml
my_robot_cell/my_robot_cell_description/launch/: view_robot.launch.py
my_robot_cell/my_robot_cell_description/meshes/: 171005_Motek_Tisch.dae
my_robot_cell/my_robot_cell_moveit_config/: package.xml
shared_workspace/shared_workspace_control/: CMakeLists.txt
shared_workspace/shared_workspace_description/: CMakeLists.txt
shared_workspace/shared_workspace_description/urdf/: shared_workspace.urdf.xacro
shared_workspace/shared_workspace_moveit_config/: package.xml
shared_workspace_control/: package.xml
shared_workspace_control/config/: ur20_calibration.yaml
shared_workspace_control/launch/: start_robot.launch.py
shared_workspace_description/: package.xml
shared_workspace_description/launch/: view_workspace.launch.py
shared_workspace_description/rviz/: urdf.rviz
shared_workspace_moveit_config/: .setup_assistant  CMakeLists.txt
shared_workspace_moveit_config/config/: shared_workspace.ros2_control.xacro  shared_workspace.srdf
shared_workspace_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ur_documentation/: README.rst
ur_robot_driver/launch/: ur_dashboard_client.launch.py
ur_robot_driver/src/: robot_state_helper.cpp
(+22 files in other folders)
